frontend: fix message text overflow

--- a/src/web/messenger/src/app/component/message/message.component.scss
+++ b/src/web/messenger/src/app/component/message/message.component.scss
@@ -32,6 +32,7 @@
 
     /*preserving line brakes*/
     white-space: pre-wrap;
+    word-break: break-word;
   }
 
 }
